Fix record tree icon/label wrapping if shopping cart visible

--- a/qsa-public-spa/src/scss/overrides.scss
+++ b/qsa-public-spa/src/scss/overrides.scss
@@ -37,6 +37,8 @@
 }
 
 .record-context {
+  clear: both;
+
   ul {
     list-style: none;
   }
